[gd_scene load_steps=8 format=3 uid="uid://bmewsxcubu43p"]

[ext_resource type="Script" uid="uid://d4e1vpoq23qka" path="res://scenes/scene_play.gd" id="1_qs2yt"]
[ext_resource type="PackedScene" uid="uid://c5cxsqwbtmoxx" path="res://elements/player/player_sing.tscn" id="2_6apec"]
[ext_resource type="PackedScene" uid="uid://cgg3hms7pb3iv" path="res://elements/player/player_view.tscn" id="3_ifj7e"]
[ext_resource type="PackedScene" uid="uid://js4ryiq1isxr" path="res://elements/enemy/enemy_big_eye.tscn" id="4_nw72c"]
[ext_resource type="PackedScene" uid="uid://dr640pnrvvemo" path="res://world.tscn" id="5_g6kp8"]
[ext_resource type="PackedScene" uid="uid://bh7vbi8yfyyru" path="res://utils/player_state.tscn" id="6_eibcc"]
[ext_resource type="PackedScene" uid="uid://cukessl3tlctk" path="res://scenes/ui_fail.tscn" id="7_6apec"]

[node name="TestScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_qs2yt")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerSing" parent="." instance=ExtResource("2_6apec")]
position = Vector2(199, 106)

[node name="PlayerView" parent="." instance=ExtResource("3_ifj7e")]
position = Vector2(299, 214)

[node name="EnemyBigEye" parent="." instance=ExtResource("4_nw72c")]
position = Vector2(137, 184)

[node name="Node2D" parent="." instance=ExtResource("5_g6kp8")]
y_sort_enabled = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="PlayerState" parent="." instance=ExtResource("6_eibcc")]
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)

[node name="NodeForScare" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UiFail" parent="CanvasLayer" instance=ExtResource("7_6apec")]
visible = false
